Add spotless plugin and fix grammar issues