@@ -1,14 +1,23 @@
 /**
- * Copyright 2005-2024 Qlik
- * 
- * The contents of this file is subject to the terms of the Apache 2.0 open
- * source license available at http://www.opensource.org/licenses/apache-2.0
- * 
+ * Copyright 2005-2026 Qlik
+ *<p>
+ * The content of this file is subject to the terms of the Apache 2.0 open
+ * source license available at https://www.opensource.org/licenses/apache-2.0
+ *<p>
  * Restlet is a registered trademark of QlikTech International AB.
  */
-
 package org.restlet.engine.header;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.restlet.data.ClientInfo;
 import org.restlet.data.Encoding;
@@ -16,35 +25,26 @@ import org.restlet.data.Header;
 import org.restlet.data.MediaType;
 import org.restlet.engine.util.DateUtils;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
-
 /**
  * Unit tests for the header.
  *
  * @author Jerome Louvel
  */
-public class HeaderTestCase {
-    /**
-     * Test the {@link HeaderReader#addValues(java.util.Collection)} method.
-     */
+class HeaderTestCase {
+    /** Test the {@link HeaderReader#addValues(java.util.Collection)} method. */
     @Test
-    public void testAddValues() {
+    void testAddValues() {
         List<Encoding> list = new ArrayList<>();
         new EncodingReader("gzip,deflate").addValues(list);
-        assertEquals(list.size(), 2);
-        assertEquals(list.get(0), Encoding.GZIP);
-        assertEquals(list.get(1), Encoding.DEFLATE);
+        assertEquals(2, list.size());
+        assertEquals(Encoding.GZIP, list.get(0));
+        assertEquals(Encoding.DEFLATE, list.get(1));
 
         list = new ArrayList<>();
         new EncodingReader("gzip,identity, deflate").addValues(list);
-        assertEquals(list.size(), 2);
-        assertEquals(list.get(0), Encoding.GZIP);
-        assertEquals(list.get(1), Encoding.DEFLATE);
+        assertEquals(2, list.size());
+        assertEquals(Encoding.GZIP, list.get(0));
+        assertEquals(Encoding.DEFLATE, list.get(1));
 
         list = new ArrayList<>();
         new EncodingReader("identity").addValues(list);
@@ -69,35 +69,31 @@ public class HeaderTestCase {
         tr = new TokenReader("bytes,");
         l = tr.readValues();
         assertTrue(l.contains("bytes"));
-        assertEquals(l.size(), 1);
+        assertEquals(1, l.size());
 
         tr = new TokenReader("");
         l = tr.readValues();
-        assertEquals(l.size(), 1);
+        assertEquals(1, l.size());
     }
 
     @Test
-    public void testInvalidDate() {
+    void testInvalidDate() {
         final String headerValue = "-1";
-        final Date date = DateUtils.parse(headerValue,
-                DateUtils.FORMAT_RFC_1123);
+        final Date date = DateUtils.parse(headerValue, DateUtils.FORMAT_RFC_1123);
         assertNull(date);
 
-        final Date unmodifiableDate = DateUtils.unmodifiable(date);
-        assertNull(unmodifiableDate);
+        assertNull(DateUtils.unmodifiable(date));
     }
 
-    /**
-     * Tests the parsing.
-     */
+    /** Tests the parsing. */
     @Test
-    public void testParsing() {
+    void testParsing() {
         String header1 = "Accept-Encoding,User-Agent";
         String header2 = "Accept-Encoding , User-Agent";
         final String header3 = "Accept-Encoding,\r\tUser-Agent";
         final String header4 = "Accept-Encoding,\r User-Agent";
         final String header5 = "Accept-Encoding, \r \t User-Agent";
-        String[] values = new String[]{"Accept-Encoding", "User-Agent"};
+        String[] values = new String[] {"Accept-Encoding", "User-Agent"};
         testValues(header1, values);
         testValues(header2, values);
         testValues(header3, values);
@@ -106,7 +102,7 @@ public class HeaderTestCase {
 
         header1 = "Accept-Encoding, Accept-Language, Accept";
         header2 = "Accept-Encoding,Accept-Language,Accept";
-        values = new String[]{"Accept-Encoding", "Accept-Language", "Accept"};
+        values = new String[] {"Accept-Encoding", "Accept-Language", "Accept"};
         testValues(header1, values);
         testValues(header2, values);
 
@@ -114,62 +110,45 @@ public class HeaderTestCase {
         header1 = "gzip;q=1.0, identity;q=0.5 , *;q=0";
         ClientInfo clientInfo = new ClientInfo();
         PreferenceReader.addEncodings(header1, clientInfo);
-        assertEquals(clientInfo.getAcceptedEncodings().get(0).getMetadata(),
-                Encoding.GZIP);
-        assertEquals(clientInfo.getAcceptedEncodings().get(0).getQuality(),
-                1.0F);
-        assertEquals(clientInfo.getAcceptedEncodings().get(1).getMetadata(),
-                Encoding.IDENTITY);
-        assertEquals(clientInfo.getAcceptedEncodings().get(1).getQuality(),
-                0.5F);
-        assertEquals(clientInfo.getAcceptedEncodings().get(2).getMetadata(),
-                Encoding.ALL);
-        assertEquals(clientInfo.getAcceptedEncodings().get(2).getQuality(), 0F);
+        assertEquals(Encoding.GZIP, clientInfo.getAcceptedEncodings().get(0).getMetadata());
+        assertEquals(1.0F, clientInfo.getAcceptedEncodings().get(0).getQuality());
+        assertEquals(Encoding.IDENTITY, clientInfo.getAcceptedEncodings().get(1).getMetadata());
+        assertEquals(0.5F, clientInfo.getAcceptedEncodings().get(1).getQuality());
+        assertEquals(Encoding.ALL, clientInfo.getAcceptedEncodings().get(2).getMetadata());
+        assertEquals(0F, clientInfo.getAcceptedEncodings().get(2).getQuality());
 
         // Test the parsing of a "Accept" header
         header1 = "text/html, image/gif, image/jpeg, *; q=.2, */*; q=.2";
         clientInfo = new ClientInfo();
         PreferenceReader.addMediaTypes(header1, clientInfo);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(0).getMetadata(),
-                MediaType.TEXT_HTML);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(0).getQuality(),
-                1.0F);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(1).getMetadata(),
-                MediaType.IMAGE_GIF);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(1).getQuality(),
-                1.0F);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(2).getMetadata(),
-                MediaType.IMAGE_JPEG);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(2).getQuality(),
-                1.0F);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(3).getMetadata(),
-                new MediaType("*"));
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(3).getQuality(),
-                0.2F);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(4).getMetadata(),
-                MediaType.ALL);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(4).getQuality(),
-                0.2F);
+        assertEquals(MediaType.TEXT_HTML, clientInfo.getAcceptedMediaTypes().get(0).getMetadata());
+        assertEquals(1.0F, clientInfo.getAcceptedMediaTypes().get(0).getQuality());
+        assertEquals(MediaType.IMAGE_GIF, clientInfo.getAcceptedMediaTypes().get(1).getMetadata());
+        assertEquals(1.0F, clientInfo.getAcceptedMediaTypes().get(1).getQuality());
+        assertEquals(MediaType.IMAGE_JPEG, clientInfo.getAcceptedMediaTypes().get(2).getMetadata());
+        assertEquals(1.0F, clientInfo.getAcceptedMediaTypes().get(2).getQuality());
+        assertEquals(new MediaType("*"), clientInfo.getAcceptedMediaTypes().get(3).getMetadata());
+        assertEquals(0.2F, clientInfo.getAcceptedMediaTypes().get(3).getQuality());
+        assertEquals(MediaType.ALL, clientInfo.getAcceptedMediaTypes().get(4).getMetadata());
+        assertEquals(0.2F, clientInfo.getAcceptedMediaTypes().get(4).getQuality());
 
         // Test a more complex header
-        header1 = "text/html, application/vnd.wap.xhtml+xml, "
-                + "application/xhtml+xml; profile=\"http://www.wapforum.org/xhtml\", "
-                + "image/gif, image/jpeg, image/pjpeg, audio/amr, */*";
+        header1 =
+                "text/html, application/vnd.wap.xhtml+xml, "
+                        + "application/xhtml+xml; profile=\"http://www.wapforum.org/xhtml\", "
+                        + "image/gif, image/jpeg, image/pjpeg, audio/amr, */*";
         clientInfo = new ClientInfo();
         PreferenceReader.addMediaTypes(header1, clientInfo);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(0).getMetadata(),
-                MediaType.TEXT_HTML);
-        assertEquals(clientInfo.getAcceptedMediaTypes().get(0).getQuality(),
-                1.0F);
+        assertEquals(
+                MediaType.TEXT_HTML, clientInfo.getAcceptedMediaTypes().getFirst().getMetadata());
+        assertEquals(1.0F, clientInfo.getAcceptedMediaTypes().getFirst().getQuality());
     }
 
     /**
      * Test that the parsing of a header returns the given array of values.
      *
-     * @param header
-     *         The header value to parse.
-     * @param values
-     *         The parsed values.
+     * @param header The header value to parse.
+     * @param values The parsed values.
      */
     public void testValues(String header, String[] values) {
         HeaderReader<Object> hr = new HeaderReader<>(header);
@@ -184,7 +163,7 @@ public class HeaderTestCase {
     }
 
     @Test
-    public void testEmptyValue() throws IOException {
+    void testEmptyValue() throws IOException {
         Header result = HeaderReader.readHeader("My-Header: ");
         assertNotNull(result);
         assertEquals("My-Header", result.getName());
